--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -10,7 +10,7 @@ header {
     h1 {
       font-weight: normal;
       font-size: 1.8rem;
-      font-weight: $font-bold;
+      font-weight: $font-bolder;
     }
 
     p {
