--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -35,7 +35,7 @@ body {
 }
 
 #root {
-  position: absolute;
+  // position: absolute;
   background-color: $dark-gray;
   width: 100%;
   height: 100%;
@@ -159,7 +159,7 @@ section {
   }
 
   &.crash {
-    // animation: trash-can 4s;
+    animation: trash-can 4s;
     visibility: visible;
 
     &.trash__front {
