--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -35,7 +35,7 @@ body {
 }
 
 #root {
-  // position: absolute;
+  position: absolute;
   background-color: $dark-gray;
   width: 100%;
   height: 100%;
