--- a/src/styles/partials/_console.scss
+++ b/src/styles/partials/_console.scss
@@ -2,7 +2,7 @@
   font-family: $font-mono;
   background-color: $medium-gray;
   padding: 25px;
-  height: calc(100vh - 125px);
+  height: 100%;
   overflow-y: scroll;
   color: $text;
   font-size: 0.75rem;
