--- a/src/styles/partials/_resume.scss
+++ b/src/styles/partials/_resume.scss
@@ -1,6 +1,6 @@
 .resume {
   background: $light-gray;
-  padding: 1.3rem;
-  height: calc(100vh - 125px);
+  padding: 25px;
+  height: 100%;
   overflow-y: scroll;
 }
