--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,162 +1,14 @@
-$font-bold: 500;
-$font-bolder: 600;
-$font-mono: 'Source Code Pro', monospace;
-$font-sans-serif: 'Avenir Next', Avenir, -apple-system, BlinkMacSystemFont,
-  'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji',
-  'Segoe UI Emoji', 'Segoe UI Symbol';
-
-$gray: #6b778c;
-$light-gray: #f4f5f7;
-$medium-gray: darken($light-gray, 3%);
-$dark-gray: darken($light-gray, 10%);
-$text: #484868;
-$primary: #3cb66f;
-
-$tablet-breakpoint: 768px;
-$fast-duration: 150ms;
-$normal-duration: 300ms;
-$slow-duration: 600ms;
-
-@import 'partials/base';
+@import 'partials/variables';
+@import 'partials/components/app';
+@import 'partials/components/console';
+@import 'partials/components/resume';
+@import 'partials/components/header';
 @import 'partials/animations';
 @import 'partials/reset';
 @import 'partials/code';
 @import 'partials/header';
 @import 'partials/footer';
-@import 'partials/components/app';
-@import 'partials/components/console';
-@import 'partials/components/resume';
-@import 'partials/components/header';
-
-body {
-  color: $text;
-  font-family: $font-sans-serif;
-  font-size: 14pt;
-  background: linear-gradient(to left bottom, #5c5c5c 0%,#3c3c3c 100%);
-}
-
-.wrap {
-  min-height: 100vh;
-  position: relative;
-
-  > .inner-wrap {
-    background-color: white;
-    z-index: 1000;
-    transition:
-      transform $slow-duration ease-in-out,
-      border-radius $slow-duration ease-in-out,
-      opacity $slow-duration ease-in-out;
-    transform: translateY(0%);
-    transform-origin: 50vw 42vh;
-    position: absolute;
-    width: 100%;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-
-  &.interactive-mode {
-    height: 100vh;
-    overflow: hidden;
-
-    > .inner-wrap {
-      border-radius: 10px 10px 0 0;
-      transform: scale(0.92);
-      opacity: 0.8;
-    }
-  }
-
-  &.crash {
-    animation: zoom-out 4s forwards;
-    z-index: 1000;
-  }
-}
-
-main {
-  margin: 100px 0;
-  transition: $fast-duration ease-in-out;
-}
-
-section {
-  margin-bottom: 200px;
-  display: block;
-  line-height: 1.5;
-
-  h3, h4, p {
-    margin-bottom: 1rem;
-  }
-
-  h3, h4 {
-    font-weight: $font-bolder;
-    font-size: 1.3rem;
-
-    a {
-      text-decoration: none;
-      color: $text;
-
-      span {
-        transition: $fast-duration ease-in-out;
-        transform: translateX(-5px);
-        opacity: 0;
-        display: inline-block;
-        height: 14px;
-      }
-
-      &.slack-colors {
-        color: #4C9689;
-      }
-
-      &.pop-cover {
-        color: #A773A4;
-      }
-
-      &.kobra {
-        color: #5AB4F8;
-      }
-
-      &:hover span {
-        opacity: 1;
-        transform: translateX(0px);
-      }
-    }
-  }
-
-  .sub-heading {
-    font-weight: $font-bold;
-  }
-}
-
-.trash {
-  position: fixed;
-  top: 100%;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 50vw;
-  height: 50vw;
-  transform-origin: center;
-  visibility: hidden;
-
-  img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 50vw;
-    height: auto;
-  }
-
-  &.crash {
-    animation: trash-can 4s;
-    visibility: visible;
-
-    &.trash__front {
-      z-index: 9000;
-    }
-  }
-}
-
-@media (max-width: $tablet-breakpoint) {
-  .mobile-hide {
-    display: none;
-  }
-}
+@import 'partials/typography';
+@import 'partials/easter-egg';
+@import 'partials/base';
+@import 'partials/tablet';
