--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,13 +2,13 @@
 @import 'partials/components/app';
 @import 'partials/components/console';
 @import 'partials/components/resume';
-@import 'partials/components/header';
 @import 'partials/animations';
 @import 'partials/reset';
 @import 'partials/code';
 @import 'partials/header';
 @import 'partials/footer';
-@import 'partials/typography';
+@import 'partials/nav';
+@import 'partials/content';
 @import 'partials/easter-egg';
 @import 'partials/base';
 @import 'partials/tablet';
