--- a/src/styles/partials/_base.scss
+++ b/src/styles/partials/_base.scss
@@ -3,7 +3,7 @@ body {
   color: $text;
   font-family: $font-sans-serif;
   font-size: 14pt;
-  background: linear-gradient(to left bottom, #5c5c5c 0%,#3c3c3c 100%);
+  background: linear-gradient(to left bottom, #3c3c3c 0%,#1c1c1c 100%);
 }
 
 .wrap {
@@ -16,25 +16,23 @@ body {
     transition:
       transform $slow-duration ease-in-out,
       border-radius $slow-duration ease-in-out,
-      opacity $slow-duration ease-in-out;
+      background-color $slow-duration ease-in-out;
     transform: translateY(0%);
     transform-origin: 50vw 35vh;
     position: absolute;
     width: 100%;
     min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
   }
 
   &.interactive-mode {
-    height: 100vh;
     overflow: hidden;
 
     > .inner-wrap {
+      overflow: hidden;
+      pointer-events: none;
       border-radius: $round-border-radius $round-border-radius 0 0;
       transform: scale(0.92);
-      opacity: 0.8;
+      background-color: darken($light-gray, 10%);
     }
   }
 
@@ -45,12 +43,11 @@ body {
 }
 
 .container {
-  max-width: 768px;
+  max-width: $tablet-breakpoint;
   width: 100%;
   margin: 0 auto;
   padding: 0 2rem;
   transition: $slow-duration ease-in-out;
-  will-change: max-width;
 }
 
 .link {
@@ -59,45 +56,7 @@ body {
   text-decoration: underline;
 }
 
-.round-link {
-  border-radius: 50px;
-  padding: 6px 16px;
-  font-size: 0.9rem;
-  font-weight: $font-bold;
-  text-decoration: none;
-  color: $gray;
-
-  &.active {
-    background: $primary;
-    color: white;
-  }
-
-  &:not(.active):hover {
-    background: $light-gray;
-  }
-
-  &:focus {
-    box-shadow: inset 0 0 0 2px $primary;
-    outline: none;
-  }
-
-  &:not(.active):active {
-    background: lighten($primary, 20%);
-    color: white;
-  }
-}
-
 main {
   margin: 100px 0;
   transition: $fast-duration ease-in-out;
-}
-
-section {
-  margin-bottom: 200px;
-  display: block;
-  line-height: 1.5;
-
-  .sub-heading {
-    font-weight: $font-bold;
-  }
 }
