--- a/src/styles/partials/components/_app.scss
+++ b/src/styles/partials/components/_app.scss
@@ -2,17 +2,34 @@
   position: fixed;
   background-color: $dark-gray;
   z-index: 9000;
-  width: 96%;
+  width: 96vw;
   top: 100%;
-  height: 100vh;
-  left: 2%;
+  height: 95vh;
+  left: 2vw;
 }
 
 .app-selector {
   transform: translateY(0%);
   transition: $slow-duration ease-in-out;
-  border-radius: $round-border-radius $round-border-radius 0 0;
-  height: calc(100vh - 45px);
+
+  .app-selector__header {
+    background: white;
+    border-radius: $round-border-radius $round-border-radius 0 0;
+    overflow: hidden;
+    padding: 15px;
+    border-bottom: 1px solid $dark-gray;
+    font-weight: $font-bolder;
+    font-size: 1.1rem;
+
+    a {
+      color: lighten($text, 10%);
+      text-decoration: none;
+
+      &:hover {
+        color: $text;
+      }
+    }
+  }
 
   .app-selector__content {
     display: grid;
