FEAT: add resume splash screen

--- a/src/styles/partials/_content.scss
+++ b/src/styles/partials/_content.scss
@@ -2,6 +2,7 @@
   margin-bottom: 200px;
   display: block;
   position: relative;
+  line-height: 1.5;
 
   .content__title {
     font-weight: $font-bolder;
